<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Volunteers WU 2013</string>

    <!-- App's String -->
    <!-- Backend String -->
    <string name="OBJECT_TYPE_POST">application/x-www-form-urlencoded</string>
    <string name="AUTH_TOKEN">aee58a92-d42d-42e8-b55e-12e4289586fc</string>
    <string name="JUNIPER_CLIENT_ID">23e47820-fe2e-4e5e-9a2c-6a24fad9fa92</string>
    <string name="JUNIPER_USER_DATA_AUTH">Bearer d13396ec22b37d4d6da70efd8dcf2bbcad4bb0e1</string>
    <string name="URL_ANONYMOUS_LOGIN">/anonymus_login</string>
    <string name="URL_USER_DATA">/getUserData</string>
    <string name="URL_BACKEND">http://testuni.app.smartcampuslab.it</string>
    <string name="URL_BACKEND_JUNIPER">https://smartcampus.eventbuilder.it</string>
    <string name="URL_JUNIPER_LOGIN">/oauth/token</string>
    <string name="URL_EVENTO_SEARCH">/evento/search</string>
    <string name="URL_POI_SEARCH">/poi/search</string>
    <string name="URL_INVALIDATE">/invalidate</string>
    <string name="URL_EVENTO_PER_DATA">/evento/data/</string>
    <string name="URL_EVENTO_PER_SPORT">/evento/sport/</string>
    <string name="URL_EVENTO_PER_POI">/poi_evento</string>
    <string name="URL_MY_AGENDA">/meeting/</string>
    <string name="URL_ATLETI_PER_EVENTO">/atleti_evento</string>
    <string name="URL_POI_PER_TIPO">/poi/</string>
    <string name="URL_CATEGORIE_VOLONTARI">/volontari/categorie</string>
    <string name="URL_SEND_TICKET">/ticket/send</string>
    <string name="URL_DOMANDA">/domanda</string>
    <string name="URL_ALL_DOMANDA">/all_domanda</string>
    <string name="URL_TURNI">/turni/</string>
    <string name="URL_UTENTI_PER_TURNO">/users_for_turn</string>
    <string name="URL_SAVE_UTENTE">/utente/save</string>
    <string name="URL_SPORT">/sport</string>
    <string name="URL_ICE_AND_FIRE">https://tickets.gtsu.org/login/</string>

    <!-- Activity String -->
    <string name="ROUTE_FOR">Route for </string>
    <string name="DISCIPLINA">Discipline </string>
    <string name="EVENTI_OGGI">Today events </string>
    <string name="EVENTI_LABEL_OGGI">TODAY</string>
    <string name="MEETING_OGGI">My Agenda </string>
    <string name="PLANNER_DA">From: </string>
    <string name="PLANNER_A">To: </string>
    <string name="PLANNER_VISUALIZZA">Show: </string>
    <string name="PLANNER_FUNZIONE">Role: </string>
    <string name="FAQ_DOMANDA">Question: </string>
    <string name="FAQ_RISULTATI">Results: </string>
    <string name="FAQ_RISPOSTA">Answer: </string>
    <string name="FAQ_ACCURATEZZA">Accuracy: </string>
    <string name="PROFILO_SALUTO">Hi,\n </string>
    <string name="PROFILO_FUNZIONE">Contacts for role: </string>

    <!-- POI String -->
    <string name="CATEGORIA_SPORT">Sport</string>
    <string name="CATEGORIA_NOLLEGGIO_SCI">Noleggio Scii</string>
    <string name="CATEGORIA_SCUOLA_SCI">Scuola Scii</string>
    <!-- <string name="CATEGORIA_IMPIANTO_SCII">Impianto Scii</string> -->
    <string name="CATEGORIA_STADIO_GHIACCIO">Stadio del Ghiaccio</string>
    <string name="CATEGORIA_SNOWPARK">Snowpark</string>
    <!-- <string name="CATEGORIA_STADIO_SALTO">Stadio di salto</string> -->
    <string name="CATEGORIA_CAMPO_SPORTIVO">Campo Sportivo</string>
    <!-- <string name="CATEGORIA_CAMPO_TENNIS">Campo di Tennis</string> -->
    <!-- <string name="CATEGORIA_MANEGGIO">Maneggio</string> -->
    <!-- <string name="CATEGORIA_PISCINA">Piscina</string> -->
    <!-- <string name="CATEGORIA_PALESTRA">Palestra</string> -->
    <string name="CATEGORIA_TEMPOLIBERO">Tempo Libero</string>
    <string name="CATEGORIA_DISCO">Disco</string>
    <!-- <string name="CATEGORIA_MINIGOLF">Minigolf</string> -->
    <string name="CATEGORIA_WELLNESS">Wellness</string>
    <string name="CATEGORIA_PARCO">Parco</string>
    <!-- <string name="CATEGORIA_ATTRAZIONE">Attrazione</string> -->
    <string name="CATEGORIA_MUSEO">Museo</string>
    <!-- <string name="CATEGORIA_MONUMENTO">Monumento</string> -->
    <!-- <string name="CATEGORIA_SITO_ARCHEOLOGICO">Sito Archeologico</string> -->
    <string name="CATEGORIA_TEATRO">Teatro</string>
    <!-- <string name="CATEGORIA_LUOGO_CULTO">Luogo di Culto</string> -->
    <string name="CATEGORIA_MANGIARE">Mangiare</string>
    <string name="CATEGORIA_PIZZERIA">Pizzeria</string>
    <string name="CATEGORIA_RISTORANTE">Ristorante</string>
    <string name="CATEGORIA_AGRITURISMO">Agriturismo</string>
    <string name="CATEGORIA_MALGA">Malga</string>
    <string name="CATEGORIA_BIRRERIA">Birreria</string>
    <string name="CATEGORIA_BAR">Bar</string>
    <string name="CATEGORIA_GELATERIA">Gelateria</string>
    <string name="CATEGORIA_DORMIRE">Dormire</string>
    <string name="CATEGORIA_HOTEL">Hotel</string>
    <string name="CATEGORIA_RESIDENCE">Residence</string>
    <!-- <string name="CATEGORIA_APPARTAMENTO_VACANZE">Appartamento per Vacanze</string> -->
    <!-- <string name="CATEGORIA_AFFITTO_CAMERE">Affittasi Camere</string> -->
    <!-- <string name="CATEGORIA_BED_BREAKFAST">Bed And Breakfast</string> -->
    <string name="CATEGORIA_GARNI">Garni</string>
    <string name="CATEGORIA_RIFUGIO">Rifugio</string>
    <string name="CATEGORIA_CAMPING">Camping</string>
    <string name="CATEGORIA_MUOVERSI">Muoversi</string>
    <string name="CATEGORIA_PARCHEGGIO">Parcheggio</string>
    <string name="CATEGORIA_STAZIONE_SERVIZIO">Stazione di Servizio</string>
    <string name="CATEGORIA_TAXI">Taxi</string>
    <!-- <string name="CATEGORIA_BUS_NAVETTA">BusNavetta</string> -->
    <!-- <string name="CATEGORIA_BUS_FERMATA">Fermata Bus</string> -->
    <string name="CATEGORIA_AUTOSTAZIONE">Autostazione</string>
    <string name="CATEGORIA_FUNIVIA">Funivia</string>
    <string name="CATEGORIA_STAZIONE_TRENI">Stazione dei Treni</string>
    <string name="CATEGORIA_SERVIZIO_BICI">Noleggio Biciclette</string>
    <!-- <string name="CATEGORIA_NOLEGGIO_PRIVATO">Noleggio Macchine</string> -->
    <string name="CATEGORIA_SERVIZI">Servizi</string>
    <string name="CATEGORIA_SERVIZI_SANITARI">Servizi Sanitari</string>
    <!-- <string name="CATEGORIA_DENTISTA">Dentista</string> -->
    <!-- <string name="CATEGORIA_VETERINARIO">Veterinario</string> -->
    <string name="CATEGORIA_FARMACIA">Farmacia</string>
    <!-- <string name="CATEGORIA_IGIENICI">Servizi Igienici</string> -->
    <!-- <string name="CATEGORIA_ISOLE_ECOLOGICHE">Isole Ecologiche</string> -->
    <!-- <string name="CATEGORIA_FONTANE">Fontane</string> -->
    <!-- <string name="CATEGORIA_AUTOMOTO">AutoMoto</string> -->
    <!-- <string name="CATEGORIA_SERVIZI_ABBIGLIAMENTO">Servizi Abbigliamento</string> -->
    <!-- <string name="CATEGORIA_PARRUCCHIERA">Parrucchiera</string> -->
    <!-- <string name="CATEGORIA_ISTRUZIONE">Istruzione</string> -->
    <!-- <string name="CATEGORIA_BIBLIOTECA">Biblioteca</string> -->
    <string name="CATEGORIA_WIFI">Wi-Fi</string>
    <!-- <string name="CATEGORIA_AGENZIA_VIAGGI">Agenzia di Viaggi</string> -->
    <string name="CATEGORIA_INFO">Info</string>
    <!-- <string name="CATEGORIA_FORZE_ORDINE">Forze dell Ordine</string> -->
    <!-- <string name="CATEGORIA_SERVIZI_MUNICIPALI">Servizi Municipali</string> -->
    <string name="CATEGORIA_POSTA">Posta</string>
    <string name="CATEGORIA_BANCA">Banca</string>
    <string name="CATEGORIA_COMPRARE">Comprare</string>
    <!-- <string name="CATEGORIA_PRODOTTI_TIPICI">Prodotti Tipici</string> -->
    <string name="CATEGORIA_SOUVENIR">Souvenir</string>
    <string name="CATEGORIA_MERCATO">Mercato</string>
    <!-- <string name="CATEGORIA_ANTIQUARIATO">Antiquariato</string> -->
    <!-- <string name="CATEGORIA_CARTOLERIA">Cartoleria</string> -->
    <string name="CATEGORIA_TABACCHINO">Tabaccheria</string>
    <!-- <string name="CATEGORIA_CENTROCOMMERCIALE">Centro Commerciale</string> -->
    <!-- <string name="CATEGORIA_NEGOZIO_ANIMALI">Negozio di Animali</string> -->
    <!-- <string name="CATEGORIA_GIOCATTOLI">Negozio di Giocattoli</string> -->
    <!-- <string name="CATEGORIA_OTTICO">Ottico</string> -->
    <!-- <string name="CATEGORIA_PROFUMERIA">Profumeria</string> -->
    <!-- <string name="CATEGORIA_GIOIELLERIA">Gioielleria</string> -->
    <!-- <string name="CATEGORIA_ABBIGLIAMENTO">Abbigliamento</string> -->
    <!-- <string name="CATEGORIA_NEGOZIO_SPORT">Negozio sportivo</string> -->
    <!-- <string name="CATEGORIA_ELETTRONICA">Elettronica</string> -->
    <!-- <string name="CATEGORIA_FERRAMENTA">Ferramenta</string> -->
    <!-- <string name="CATEGORIA_CASALINGHI">Casalinghi</string> -->
    <!-- <string name="CATEGORIA_ALIMENTARI">Alimentari</string> -->
    <!--  -->
    <string name="CONTATTO">Contact</string>
    <string name="CHIUDI">Close</string>
    <string name="CHIAMA">Call</string>
    <string name="AVVISO">Alert</string>
    <string name="ACCEDI">Login</string>
    <string name="ANNULLA">Abort</string>
    <string name="NESSUN_NUMERO">No telephone number available</string>
    <string name="NESSUN_EVENTO">No events available</string>
    <string name="NESSUN_ELEMENTO">No elements found</string>
    <string name="NESSUNA_RISPOSTA">No answers found</string>
    <string name="NESSUNA_CONNESSIONE">No connection</string>
    <string name="LOGOUT_TITLE">Alert</string>
    <string name="LOGOUT_TEXT">Are you sure to quit and logout?</string>
    <string name="LOGOUT_LOGOUT">Logout</string>
    <string name="LOGOUT_CANCEL">Cancel</string>
    <string name="DIALOG_STRUMENTI">\nChoose tool:</string>
    <string name="CREDITS_MAIL">"E-mail sent using \"Volunteers WU 2013\""</string>
    <string name="TICKETS_AVVISO">You are going to leave the app and be automatically logged into the WU2013 trouble ticketing system</string>
    <string name="TICKETS_NON_CHIEDERE">Never show this warning again</string>
    <string name="LOGIN_INSUCCESSO">Wrong username or password</string>
    <string name="LOGIN_NON_COMPLETO">Fill username and password fields</string>
    <!--  -->

    <string name="title_activity_credits">Credits</string>

</resources>