<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FAQ" >

    <smartcampus.android.template.standalone.Utilities.FontTextView
        android:id="@+id/text_indirizzo_poi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_DOMANDA"
        android:textColor="#3294ad"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0" >

        <ImageView
            android:id="@+id/image_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/btn_main_cerca" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/image_search" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8" >
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.33" >

                <EditText
                    android:id="@+id/text_domanda"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:background="#0fff"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="#fff" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_invia_domanda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7" >
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0fff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <smartcampus.android.template.standalone.Utilities.FontTextView
            android:id="@+id/text_indirizzo_poi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FAQ_RISULTATI"
            android:textColor="#3294ad"
            android:textSize="20dp" />

        <ListView
            android:id="@+id/lista_risposte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_indirizzo_poi"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:listSelector="@drawable/list_selector" >

        </ListView>

        <smartcampus.android.template.standalone.Utilities.FontTextView
            android:id="@+id/text_nessun_risultato_faq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_indirizzo_poi"
            android:gravity="center"
            android:text="@string/NESSUNA_RISPOSTA"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#3294ad"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>