<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".FilterCalendarioActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <ImageView
            android:id="@+id/btn_go_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_home" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\n"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#00ffffff" />
            </RelativeLayout>

            <smartcampus.android.template.standalone.Utilities.FontTextView
                android:id="@+id/text_indirizzo_poi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PLANNER_DA"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3294ad" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="0.0" >

                    <ImageView
                        android:id="@+id/img_cal_data_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/btn_cal_data" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/img_cal_data_from" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.82" >
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.38" >

                            <Spinner
                                android:id="@+id/spinner_cal_data_from"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#00ffffff" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/btn_spinner_data_from"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.75" >
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <smartcampus.android.template.standalone.Utilities.FontTextView
                android:id="@+id/FontTextView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PLANNER_A"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3294ad" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="0.0" >

                    <ImageView
                        android:id="@+id/img_cal_data_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/btn_cal_data" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/img_cal_data_to" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.82" >
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.38" >

                            <Spinner
                                android:id="@+id/spinner_cal_data_to"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#00ffffff" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/btn_spinner_data_to"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.75" >
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#00ffffff" />
            </RelativeLayout>

            <smartcampus.android.template.standalone.Utilities.FontTextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PLANNER_VISUALIZZA"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3294ad" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="0.0" >

                    <ImageView
                        android:id="@+id/img_cal_luogo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/btn_cal_luogo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/img_cal_luogo" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.82" >
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.38" >

                            <Spinner
                                android:id="@+id/spinner_cal_personale"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#00ffffff" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/btn_spinner_luogo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.75" >
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <smartcampus.android.template.standalone.Utilities.FontTextView
                android:id="@+id/text_descrizione_poi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/PLANNER_FUNZIONE"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3294ad" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="0.0" >

                    <ImageView
                        android:id="@+id/img_cal_categoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/btn_cal_categoria" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/img_cal_categoria" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.82" >
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.38" >

                            <Spinner
                                android:id="@+id/spinner_cal_categoria"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#00ffffff" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/btn_spinner_categoria"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.75" >
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\n"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#00ffffff" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" >

                <ImageView
                    android:id="@+id/btn_calendario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/btn_cal_show" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>